--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "lmdb"]
 	path = lmdb
-	url = https://github.com/LMDB/lmdb
+	url = https://git.openldap.org/openldap/openldap/tree/mdb.master
