Changed lmdb gitmodule URL

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "lmdb"]
 	path = lmdb
-	url = https://git.openldap.org/openldap/openldap/tree/mdb.master
+	url = https://git.openldap.org/openldap/openldap.git
+	branch = mdb.master
